refactor: remove Page/Pageable classes and add exists(offset) to Collector
Remove deprecated Page, Pageable, SliceBuilder, Pages classes and their tests.
Add exists(int offset) method to Collector for checking existence at offset.
Update tests to use Slice-based pagination instead of Page-based.